@@ -104,7 +104,7 @@ class MainWindow:
             # this should really only fail if no "nav" frame exists...
             print(
                 "Strange - failed to get the tree control even though "
-                "we asked for a EBO_SHOWFRAMES"
+                + "we asked for a EBO_SHOWFRAMES"
             )
             print(exc)
         else:
