@@ -791,8 +791,7 @@ def HandleCommandLine(
         "",
         "--server",
         action="store",
-        help="Specifies the IIS server to install/uninstall on."
-        f" Default is '{_IIS_OBJECT}/1'",
+        help="Specifies the IIS server to install/uninstall on. Default is '{_IIS_OBJECT}/1'",
     )
 
     (options, args) = parser.parse_args(argv[1:])
